fix main alignement

--- a/sidebar_style.css
+++ b/sidebar_style.css
@@ -27,7 +27,7 @@
 
   /* Style page content */
 .main {
-    margin-left: 260px; /* Same as the width of the sidebar */
+    margin-left: 0px; /* Same as the width of the sidebar */
     padding: 0px 10px;
   }
   
